PR3/G20/src/c_ast_descendente/ConstructorASTsTiny.java
/* ConstructorASTsTiny.java */
/* Generated By:JavaCC: Do not edit this line. ConstructorASTsTiny.java */
package c_ast_descendente;
import asint.ClaseSemanticaTiny;
import asint.SintaxisAbstractaTiny.*;
public class ConstructorASTsTiny implements ConstructorASTsTinyConstants {
   private ClaseSemanticaTiny sem = new ClaseSemanticaTiny();

  final public Prog inicial() throws ParseException {
    trace_call("inicial");
    try {
Prog prog;
      prog = programa();
      jj_consume_token(0);
{if ("" != null) return prog;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("inicial");
    }
}

  final public Prog programa() throws ParseException {
    trace_call("programa");
    try {
Bloq bloq;
      bloq = bloque();
{if ("" != null) return sem.prog(bloq);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("programa");
    }
}

  final public Bloq bloque() throws ParseException {
    trace_call("bloque");
    try {
DecsOp decsOp; InstrsOp instrsOp ;
      jj_consume_token(llaveApertura);
      decsOp = declaraciones_opt();
      instrsOp = instrucciones_opt();
      jj_consume_token(llaveCierre);
{if ("" != null) return sem.bloq(decsOp, instrsOp);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("bloque");
    }
}

  final public DecsOp declaraciones_opt() throws ParseException {
    trace_call("declaraciones_opt");
    try {
Decs decs;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case bool:
      case real:
      case INT:
      case string:
      case proc:
      case struct:
      case type:
      case identificador:
      case circunflejo:{
        decs = declaraciones();
        jj_consume_token(separador);
{if ("" != null) return sem.si_decs(decs);}
        break;
        }
      default:
        jj_la1[0] = jj_gen;
{if ("" != null) return sem.no_decs();}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("declaraciones_opt");
    }
}

  final public InstrsOp instrucciones_opt() throws ParseException {
    trace_call("instrucciones_opt");
    try {
Instrs instrs;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IF:
      case WHILE:
      case NEW:
      case delete:
      case read:
      case write:
      case nl:
      case call:
      case llaveApertura:
      case eval:{
        instrs = instrucciones();
{if ("" != null) return sem.si_instrs(instrs);}
        break;
        }
      default:
        jj_la1[1] = jj_gen;
{if ("" != null) return sem.no_instrs();}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("instrucciones_opt");
    }
}

  final public Tipo tipo1() throws ParseException {
    trace_call("tipo1");
    try {
Tipo t2, rt1;
      t2 = tipo2();
      rt1 = rtipo1(t2);
{if ("" != null) return rt1;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("tipo1");
    }
}

  final public Tipo rtipo1(Tipo th0) throws ParseException {
    trace_call("rtipo1");
    try {
Token t; Tipo th1;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case corcheteApertura:{
        jj_consume_token(corcheteApertura);
        t = jj_consume_token(literalEntero);
        jj_consume_token(corcheteCierre);
        th1 = rtipo1((Tipo)sem.tipo_lista(th0, t.image).ponFila(t.beginLine).ponCol(t.beginColumn));
{if ("" != null) return th1;}
        break;
        }
      default:
        jj_la1[2] = jj_gen;
{if ("" != null) return th0;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("rtipo1");
    }
}

// TODO .ponFila(t.beginLine).ponCol(t.beginColumn);}?
  final public Tipo tipo2() throws ParseException {
    trace_call("tipo2");
    try {
Tipo t;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case circunflejo:{
        jj_consume_token(circunflejo);
        t = tipo2();
{if ("" != null) return sem.tipo_circum(t);}
        break;
        }
      case bool:
      case real:
      case INT:
      case string:
      case struct:
      case identificador:{
        t = tipo3();
{if ("" != null) return t;}
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("tipo2");
    }
}

  final public Tipo tipo3() throws ParseException {
    trace_call("tipo3");
    try {
Tipo tipo; Campos c; Token t;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case bool:
      case real:
      case INT:
      case string:{
        tipo = tipoBasico();
{if ("" != null) return tipo;}
        break;
        }
      case struct:{
        t = jj_consume_token(struct);
        jj_consume_token(llaveApertura);
        c = Campos();
        jj_consume_token(llaveCierre);
{if ("" != null) return (Tipo) sem.tipo_struct(c).ponFila(t.beginLine).ponCol(t.beginColumn);}
        break;
        }
      case identificador:{
        t = jj_consume_token(identificador);
{if ("" != null) return (Tipo) sem.tipo_iden(t.image).ponFila(t.beginLine).ponCol(t.beginColumn);}
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("tipo3");
    }
}

  final public Tipo tipoBasico() throws ParseException {
    trace_call("tipoBasico");
    try {
Token t;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:{
        t = jj_consume_token(INT);
{if ("" != null) return (Tipo)sem.tipo_int().ponFila(t.beginLine).ponCol(t.beginColumn);}
        break;
        }
      case real:{
        t = jj_consume_token(real);
{if ("" != null) return (Tipo)sem.tipo_real().ponFila(t.beginLine).ponCol(t.beginColumn);}
        break;
        }
      case bool:{
        t = jj_consume_token(bool);
{if ("" != null) return (Tipo)sem.tipo_bool().ponFila(t.beginLine).ponCol(t.beginColumn);}
        break;
        }
      case string:{
        t = jj_consume_token(string);
{if ("" != null) return (Tipo)sem.tipo_string().ponFila(t.beginLine).ponCol(t.beginColumn);}
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("tipoBasico");
    }
}

  final public Campos Campos() throws ParseException {
    trace_call("Campos");
    try {
Campo campo; Campos campos;
      campo = Campo();
      campos = Rcampos(sem.un_campo(campo));
{if ("" != null) return campos ;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Campos");
    }
}

  final public Campos Rcampos(Campos camposh) throws ParseException {
    trace_call("Rcampos");
    try {
Campo campo; Campos campos;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case coma:{
        jj_consume_token(coma);
        campo = Campo();
        campos = Rcampos(sem.muchos_campos(camposh, campo));
{if ("" != null) return campos;}
        break;
        }
      default:
        jj_la1[6] = jj_gen;
{if ("" != null) return camposh;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Rcampos");
    }
}

  final public Campo Campo() throws ParseException {
    trace_call("Campo");
    try {
Tipo tipo; Token t;
      tipo = tipo1();
      t = jj_consume_token(identificador);
{if ("" != null) return (Campo) sem.crea_campo(tipo,t.image).ponFila(t.beginLine).ponCol(t.beginColumn);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Campo");
    }
}

  final public Decs declaraciones() throws ParseException {
    trace_call("declaraciones");
    try {
Decs decs; Dec dec;
      dec = declaracion();
      decs = DR(sem.una_dec(dec));
{if ("" != null) return decs;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("declaraciones");
    }
}

  final public Decs DR(Decs dech) throws ParseException {
    trace_call("DR");
    try {
Dec dec; Decs decs;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case puntoycoma:{
        jj_consume_token(puntoycoma);
        dec = declaracion();
        decs = DR(sem.muchas_decs(dech,dec));
{if ("" != null) return decs;}
        break;
        }
      default:
        jj_la1[7] = jj_gen;
{if ("" != null) return dech;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("DR");
    }
}

  final public Dec declaracion() throws ParseException {
    trace_call("declaracion");
    try {
Tipo tipo; Token t; ParsFOp parsFOp; Bloq bloq;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case bool:
      case real:
      case INT:
      case string:
      case struct:
      case identificador:
      case circunflejo:{
        tipo = tipo1();
        t = jj_consume_token(identificador);
{if ("" != null) return (Dec)sem.dec_variable(tipo,t.image).ponFila(t.beginLine).ponCol(t.beginColumn);}
        break;
        }
      case type:{
        jj_consume_token(type);
        tipo = tipo1();
        t = jj_consume_token(identificador);
{if ("" != null) return (Dec)sem.dec_tipo(tipo,t.image).ponFila(t.beginLine).ponCol(t.beginColumn);}
        break;
        }
      case proc:{
        jj_consume_token(proc);
        t = jj_consume_token(identificador);
        jj_consume_token(parentesisApertura);
        parsFOp = parametrosFormales_opt();
        jj_consume_token(parentesisCierre);
        bloq = bloque();
{if ("" != null) return (Dec)sem.dec_proc(t.image,parsFOp,bloq).ponFila(t.beginLine).ponCol(t.beginColumn);}
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("declaracion");
    }
}

// TODO .ponFila(t.beginLine).ponCol(t.beginColumn);}?
  final public ParsFOp parametrosFormales_opt() throws ParseException {
    trace_call("parametrosFormales_opt");
    try {
ParsF parsF;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case bool:
      case real:
      case INT:
      case string:
      case struct:
      case identificador:
      case circunflejo:{
        parsF = parametrosFormales();
{if ("" != null) return sem.si_parsF(parsF);}
        break;
        }
      default:
        jj_la1[9] = jj_gen;
{if ("" != null) return sem.no_parsF();}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("parametrosFormales_opt");
    }
}

  final public ParsF parametrosFormales() throws ParseException {
    trace_call("parametrosFormales");
    try {
ParsF parsF; ParF parF;
      parF = parametroFormal();
      parsF = RparametrosFormales(sem.un_parF(parF));
{if ("" != null) return parsF;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("parametrosFormales");
    }
}

  final public ParsF RparametrosFormales(ParsF parsFh) throws ParseException {
    trace_call("RparametrosFormales");
    try {
ParF parF; ParsF parsF;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case coma:{
        jj_consume_token(coma);
        parF = parametroFormal();
        parsF = RparametrosFormales(sem.muchos_parsF(parsFh, parF));
{if ("" != null) return parsF;}
        break;
        }
      default:
        jj_la1[10] = jj_gen;
{if ("" != null) return parsFh;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("RparametrosFormales");
    }
}

// TODO .ponFila(t.beginLine).ponCol(t.beginColumn);}?
  final public ParF parametroFormal() throws ParseException {
    trace_call("parametroFormal");
    try {
Tipo tipo; Token t;
      //tipo = tipo1() "&" t = <identificador>
              /*tipo = tipo1() <ampersand> t = <identificador>
      	{return (ParF)sem.paramF(t.image,tipo).ponFila(t.beginLine).ponCol(t.beginColumn);}
      	|*/
              tipo = tipo1();
      t = jj_consume_token(identificador);
{if ("" != null) return (ParF)sem.param(t.image,tipo).ponFila(t.beginLine).ponCol(t.beginColumn);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("parametroFormal");
    }
}

  final public Instrs instrucciones() throws ParseException {
    trace_call("instrucciones");
    try {
Instr instr; Instrs instrs;
      instr = instruccion();
      instrs = IR(sem.una_instr(instr));
{if ("" != null) return instrs;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("instrucciones");
    }
}

  final public Instrs IR(Instrs instrh) throws ParseException {
    trace_call("IR");
    try {
Instr instr; Instrs instrs;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case puntoycoma:{
        jj_consume_token(puntoycoma);
        instr = instruccion();
        instrs = IR(sem.muchas_instrs(instrh, instr));
{if ("" != null) return instrs;}
        break;
        }
      default:
        jj_la1[11] = jj_gen;
{if ("" != null) return instrh;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("IR");
    }
}
